<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="@drawable/_loginbg"
tools:context=".ImagesFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <TextView
            android:id="@+id/ImagesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Images"
            android:textAlignment="center"
            android:textColor="@color/LightSeaGreen"
            android:textSize="36sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="ifContentScrolls"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Include your LinearLayouts and other content here as defined in the previous ScrollView XML -->
        <LinearLayout
            android:id="@+id/layoutimage01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView01"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image01"
                android:src="@drawable/image01" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutimage02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView02"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image02"
                android:src="@drawable/image02" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutimage03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutimage01">

            <ImageView
                android:id="@+id/imageView03"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image03"
                android:src="@drawable/image03" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutimage04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutimage02">

            <ImageView
                android:id="@+id/imageView04"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image04"
                android:src="@drawable/image04" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutimage05"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutimage03">

            <ImageView
                android:id="@+id/imageView05"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image05"
                android:src="@drawable/image05" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutimage06"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutimage04">

            <ImageView
                android:id="@+id/imageView06"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image06"
                android:src="@drawable/image06" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutimage07"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutimage05">

            <ImageView
                android:id="@+id/imageView07"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image07"
                android:src="@drawable/image07" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutimage08"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutimage06">

            <ImageView
                android:id="@+id/imageView08"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image08"
                android:src="@drawable/image08" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutimage09"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutimage07">

            <ImageView
                android:id="@+id/imageView09"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image09"
                android:src="@drawable/image09" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutimage10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutimage08">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image10"
                android:src="@drawable/image10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutimage11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutimage09">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image11"
                android:src="@drawable/image11" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutimage12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutimage10">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image12"
                android:src="@drawable/image12" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</FrameLayout>





