<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/_loginbg"
    tools:context=".HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

    <TextView
        android:id="@+id/HomeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Events"
        android:textAlignment="center"
        android:textColor="@color/LightSeaGreen"
        android:textSize="36sp"
        android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="ifContentScrolls"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Include your LinearLayouts and other content here as defined in the previous ScrollView XML -->
        <LinearLayout
            android:id="@+id/layoutWedding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="100dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/event_wedding"
                android:padding="8dp"
                android:src="@drawable/wedding1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Wedding"
                android:textColor="@color/LightSeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutReception"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="36dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/event_reception"
                android:padding="8dp"
                android:src="@drawable/reception2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Reception"
                android:textColor="@color/LightSeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutEngagement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutWedding">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/event_engagement"
                android:padding="8dp"
                android:src="@drawable/engagement3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Engagement"
                android:textColor="@color/LightSeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSangeet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="36dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutReception">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/event_sangeet"
                android:padding="8dp"
                android:src="@drawable/sangt4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Sangeet"
                android:textColor="@color/LightSeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutHaldi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutEngagement">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/event_haldi"
                android:padding="8dp"
                android:src="@drawable/haldi5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Haldi"
                android:textColor="@color/LightSeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBirthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="36dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSangeet">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/event_birthday"
                android:padding="8dp"
                android:src="@drawable/birthday6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Birthday"
                android:textColor="@color/LightSeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTogether"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHaldi">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/event_together"
                android:padding="8dp"
                android:src="@drawable/together7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="GetTogether"
                android:textColor="@color/LightSeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCorporate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="36dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutBirthday">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/event_corporate"
                android:padding="8dp"
                android:src="@drawable/corporate8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Corporate Gatherings"
                android:textColor="@color/LightSeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBaby"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutTogether">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/event_baby"
                android:padding="8dp"
                android:src="@drawable/baby9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="BabyShower"
                android:textColor="@color/LightSeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCradle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="36dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutCorporate">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/event_cradle"
                android:padding="8dp"
                android:src="@drawable/cradle10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Cradle Ceremony"
                android:textColor="@color/LightSeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAnniversary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="100dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutBaby">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/event_anniversary"
                android:padding="8dp"
                android:src="@drawable/anniversary11" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Anniversary"
                android:textColor="@color/LightSeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Add this Button at the bottom of your ConstraintLayout -->
        <Button
            android:id="@+id/btnBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Book"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutAnniversary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</FrameLayout>
